Fix footer links overflow issue at specific screen resolution

--- a/web/src/custom.css
+++ b/web/src/custom.css
@@ -128,7 +128,9 @@ a[href^="https://goauthentik.io?utm_source=authentik&utm_medium=flow"] {display:
 .pf-c-drawer__body {
     overflow: hidden;
 }
-
+.pf-c-login__footer, .pf-c-login__header {
+    --pf-global--Color--100: none;
+}
 .pf-c-list.pf-m-inline li {
     margin-right: 1rem!important;
     margin-left: 1rem!important;
@@ -139,14 +141,11 @@ a[href^="https://goauthentik.io?utm_source=authentik&utm_medium=flow"] {display:
 
 .tc-text {
     padding: 1rem;
-    color: var(--ak-dark-foreground);
     text-align: center;
 }
 
 .ak-login-container::-webkit-scrollbar-thumb {
     overflow: scroll;
-    /*background-color: var(--pf-c-button--m-primary--BackgroundColor);*/
-    background-color: var(--ak-dark-foreground);
 }
 
 .pf-c-login.sidebar_left .ak-login-container, .pf-c-login.sidebar_right .ak-login-container {
